--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <title>home page</title>
 </head>
-<body>
-    <h1>hi ali this is home page</h1>
+<body class="bg-dark text-white">
+    <div class="container">
+        <h1>hey social login mock up</h1>
+    </div>
+
+    <div class="container">
+       <a href="" class="btn btn-outline-success">Logout</a>
+       <a href="" class="btn btn-outline-success">Login</a>
+       <a href="" class="btn btn-outline-success">Home</a>
+    </div>
+
+    <div class="container">
+        <h1 class="display-1">You are at home page my love</h1>
+    </div>
+   
 </body>
 </html>
