--- a/views/home.ejs
+++ b/views/home.ejs
@@ -13,9 +13,9 @@
     </div>
 
     <div class="container">
-       <a href="" class="btn btn-outline-success">Logout</a>
-       <a href="" class="btn btn-outline-success">Login</a>
-       <a href="" class="btn btn-outline-success">Home</a>
+       <a href="/auth/logout" class="btn btn-outline-success">Logout</a>
+       <a href="/auth/login" class="btn btn-outline-success">Login</a>
+       <a href="/" class="btn btn-outline-success">Home</a>
     </div>
 
     <div class="container">
