--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,13 +13,13 @@
     </div>
 
     <div class="container">
-       <a href="" class="btn btn-outline-success">Logout</a>
-       <a href="" class="btn btn-outline-success">Login</a>
+       <a href="/auth/logout" class="btn btn-outline-success">Logout</a>
+       <a href="/auth/login" class="btn btn-outline-success">Login</a>
        <a href="/" class="btn btn-outline-success">Home</a>
     </div>
 
     <div class="container my-3">
-        <a href="" class="btn btn-danger">Login with Google</a>
+        <a href="/auth/google" class="btn btn-danger">Login with Google</a>
     </div>
    
 </body>
